Port PlayerRevive from NeoForge to Fabric 1.21.1 with 100% feature parity
Replaced NeoForge-specific APIs with Fabric equivalents:
- @Mod entrypoint → ModInitializer + ClientModInitializer
- AttachmentType → Mixin-injected BleedingHolder field
- NeoForge event bus → PlayerReviveEvents callback registry + Fabric API callbacks
- LivingDeathEvent (cancelable) → Mixin @Inject on ServerPlayerEntity.onDeath
- PlayerInteractEvent → UseEntityCallback
- ScreenEvent.Opening → MinecraftClientScreenMixin on setScreen
- InteractionKeyMappingTriggered → MinecraftClientMixin on ClientPlayerInteractionManager
- CommandEvent → ServerPlayNetworkHandlerMixin on executeCommand
- setForcedPose (NeoForge-only) → setPose + updatePose mixin cancel
- handsBusy/missTime (NeoForge-only) → dropped, compensated by interaction cancel mixin
- Custom blobs2 shader → vanilla blur.json (original incompatible with 1.21.1)
- All Yarn mapping conversions (Identifier, Text, NbtCompound, PlayerEntity, etc.)

Added NBT persistence for bleeding state (replaces NeoForge AttachmentType.serializable):
- ServerPlayerEntityMixin saves/loads bleeding state via writeCustomDataToNbt/readCustomDataFromNbt
- DISCONNECT handler skips kill() when server is stopping (preserves state for restart)
- JOIN handler restores bleeding state and sends update packet

Co-Authored-By: Rina <rina@furimoe.com>